Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.10.0-rc1
-
Fix Version/s: Qt Creator 4.10.0-rc1
-
Component/s: C/C++/Obj-C++ Support
-
Labels:
-
Environment:Ubuntu 18.04 LTS 64 bit
-
Commits:524cdf54bc8996ba2d7bbae1c61acb3e0b86f77a (qt-creator/qt-creator/4.10)
Description
- Create a new Qt Widgets Application.
- Open the project's file mainwindow.ui in Design mode.
- Drag a Push Button onto the Window preview, but do not save the file.
- Open the project's file mainwindow.cpp.
- In the ctor of MainWindow, add the line:
ui->p
and wait for the proposal popup.
There will be no such popup. - Save mainwindow.ui.
- Repeat step 5.
Now the popup appears and it contains the Push Button.
Creator 4.9 shows the right proposals without saving the .ui file project, regardless of whether it was built with libclang 7 or 8.
Found by Squish test tst_designer_autocomplete.
Attachments
Issue Links
- replaces
-
QTCREATORBUG-22624 [REG 4.9 -> 4.10] No code completion for ui elements
-
- Closed
-